--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -47,6 +47,7 @@
 @article{einstein1905molekularkinetischen,
   title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
   author={Einstein, A.},
+  abbr={Ann physik},
   journal={Annalen der physik,},
   volume={322},
   number={8},
