--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,55 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
+
+@book{Hor1994,
+  abbr={Hor94},
+	author = {H\"{o}rmander, L.},
+	date-added = {2021-04-24 15:12:09 +0200},
+	date-modified = {2021-08-20 00:47:09 +0200},
+	isbn = {3-540-13828-5},
+	label = {Hor},
+	mrclass = {35Sxx (35-02 47F05 47G30 58G15)},
+	mrnumber = {1313500},
+	note = {Pseudo-differential operators, Corrected reprint of the 1985 original},
+	pages = {viii+525},
+	publisher = {Springer-Verlag, Berlin},
+	series = {Grundlehren der Mathematischen Wissenschaften [Fundamental Principles of Mathematical Sciences]},
+	title = {The analysis of linear partial differential operators. {III}},
+	volume = {274},
+	year = {1994}}
+
+@article{BoDy2018,
+	author = {Bourgain, J. and Dyatlov, S.},
+	date-added = {2021-04-24 14:32:27 +0200},
+	date-modified = {2021-08-20 00:32:59 +0200},
+	doi = {10.4007/annals.2018.187.3.5},
+	fjournal = {Annals of Mathematics. Second Series},
+	issn = {0003-486X},
+	journal = {Ann. of Math. (2)},
+	label = {BoDy},
+	mrclass = {43A85 (30D60 35B34 35P05 35R01 58J50)},
+	mrnumber = {3779959},
+	mrreviewer = {Anton Deitmar},
+	number = {3},
+	pages = {825--867},
+	title = {Spectral gaps without the pressure condition},
+	url = {https://doi.org/10.4007/annals.2018.187.3.5},
+	volume = {187},
+	year = {2018},
+	bdsk-url-1 = {https://doi.org/10.4007/annals.2018.187.3.5}}
+
+@misc{GeLe2021,
+	archiveprefix = {arXiv},
+	author = {P. Germain and T. L{\'e}ger},
+	date-added = {2021-12-31 00:36:28 +0100},
+	date-modified = {2021-12-31 00:36:47 +0100},
+	eprint = {2104.04126},
+	label = {GeLe},
+	primaryclass = {math.AP},
+	title = {Spectral projectors, resolvent, and Fourier restriction on the hyperbolic space},
+	year = {2021}}
+
 
 @book{einstein1956investigations,
   bibtex_show={true},
