--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,24 +2,8 @@
 ---
 
 
-@book{Hor1994,
-  abbr={Hor94},
-	author = {H\"{o}rmander, L.},
-	date-added = {2021-04-24 15:12:09 +0200},
-	date-modified = {2021-08-20 00:47:09 +0200},
-	isbn = {3-540-13828-5},
-	label = {Hor},
-	mrclass = {35Sxx (35-02 47F05 47G30 58G15)},
-	mrnumber = {1313500},
-	note = {Pseudo-differential operators, Corrected reprint of the 1985 original},
-	pages = {viii+525},
-	publisher = {Springer-Verlag, Berlin},
-	series = {Grundlehren der Mathematischen Wissenschaften [Fundamental Principles of Mathematical Sciences]},
-	title = {The analysis of linear partial differential operators. {III}},
-	volume = {274},
-	year = {1994}}
-
 @article{BoDy2018,
+	abbr={BoDy18},
 	author = {Bourgain, J. and Dyatlov, S.},
 	date-added = {2021-04-24 14:32:27 +0200},
 	date-modified = {2021-08-20 00:32:59 +0200},
@@ -40,13 +24,9 @@
 	bdsk-url-1 = {https://doi.org/10.4007/annals.2018.187.3.5}}
 
 @misc{GeLe2021,
-	archiveprefix = {arXiv},
+	abbr={GeLe21},
 	author = {P. Germain and T. L{\'e}ger},
-	date-added = {2021-12-31 00:36:28 +0100},
-	date-modified = {2021-12-31 00:36:47 +0100},
-	eprint = {2104.04126},
-	label = {GeLe},
-	primaryclass = {math.AP},
+	arxiv = {2104.04126},
 	title = {Spectral projectors, resolvent, and Fourier restriction on the hyperbolic space},
 	year = {2021}}
 
