--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,101 +1,22 @@
 ---
 ---
-
-
-@article{BoDy2018,
-	abbr={BoDy18},
-	author = {Bourgain, J. and Dyatlov, S.},
-	date-added = {2021-04-24 14:32:27 +0200},
-	date-modified = {2021-08-20 00:32:59 +0200},
-	doi = {10.4007/annals.2018.187.3.5},
-	fjournal = {Annals of Mathematics. Second Series},
-	issn = {0003-486X},
-	journal = {Ann. of Math. (2)},
-	label = {BoDy},
-	mrclass = {43A85 (30D60 35B34 35P05 35R01 58J50)},
-	mrnumber = {3779959},
-	mrreviewer = {Anton Deitmar},
-	number = {3},
-	pages = {825--867},
-	title = {Spectral gaps without the pressure condition},
-	url = {https://doi.org/10.4007/annals.2018.187.3.5},
-	volume = {187},
-	year = {2018},
-	bdsk-url-1 = {https://doi.org/10.4007/annals.2018.187.3.5}}
-
-@misc{GeLe2021,
-	abbr={GeLe21},
-	author = {P. Germain and T. L{\'e}ger},
-	arxiv = {2104.04126},
-	title = {Spectral projectors, resolvent, and Fourier restriction on the hyperbolic space},
-	year = {2021}}
-
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@article{
+    abbr = {BoDy18},
+    Author = {Bourgain, J. and Dyatlov, S.},
+    Title = {Spectral gaps without the pressure condition},
+    Journal = {Ann. of Math. (2)},
+    Year = {2018},
+    Volume = {187},
+    Pages = {825--867},
+    HTML = {MR3779959},
+}
+@misc{
+    abbr = {GeLe21},
+    Author = {P. Germain and T. Léger},
+    Title = {Spectral projectors, resolvent, and Fourier restriction on the hyperbolic space},
+    Year = {2021},
+    Journal = {preprint},
+    arXiv = {2104.04126},
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
-}
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  abbr={Ann physik},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
