--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,6 @@
 ---
 ---
-@article{
+@article{BoDy18
     abbr = {BoDy18},
     Author = {Bourgain, J. and Dyatlov, S.},
     Title = {Spectral gaps without the pressure condition},
@@ -10,7 +10,7 @@
     Pages = {825--867},
     HTML = {MR3779959},
 }
-@misc{
+@misc{GeLe21
     abbr = {GeLe21},
     Author = {P. Germain and T. Léger},
     Title = {Spectral projectors, resolvent, and Fourier restriction on the hyperbolic space},
