--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,7 @@
     Year = {2018},
     Volume = {187},
     Pages = {825--867},
-    HTML = {MR3779959},
+    DOI = {10.4007/annals.2018.187.3.5},
 }
 @misc{GeLe21,
     abbr = {GeLe21},
