--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,15 +2,13 @@
 ---
 @article{BoDy18,
     abbr = {BoDy18},
-    Author = {Bourgain, J. and Dyatlov, S.},
+    Author = {Jean Bourgain and Semyon Dyatlov},
     Title = {Spectral gaps without the pressure condition},
     Journal = {Ann. of Math. (2)},
     Year = {2018},
-    Volume = {187},
-    Pages = {825--867},
     DOI = {10.4007/annals.2018.187.3.5},
 }
-@misc{GeLe21,
+@article{GeLe21,
     abbr = {GeLe21},
     Author = {P. Germain and T. Léger},
     Title = {Spectral projectors, resolvent, and Fourier restriction on the hyperbolic space},
