--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,20 +1,14 @@
 ---
 ---
-@article{BoDy18,
-    abbr = {BoDy18},
-    Author = {Jean Bourgain and Semyon Dyatlov},
-    Title = {Spectral gaps without the pressure condition},
-    Journal = {Ann. of Math. (2)},
-    Year = {2018},
-    DOI = {10.4007/annals.2018.187.3.5},
-}
-@article{GeLe21,
-    abbr = {GeLe21},
-    Author = {P. Germain and T. Léger},
-    Title = {Spectral projectors, resolvent, and Fourier restriction on the hyperbolic space},
-    Year = {2021},
-    Journal = {preprint},
-    arXiv = {2104.04126},
-}
 
+@article{Zha20,
+    abbr = {Zha20},
+    Author = {Zhang, H.-W.},
+    Title = {Wave and Klein-Gordon equations on certain locally symmetric spaces},
+    Journal = {J. Geom. Anal.},
+    Year = {2020},
+    ARXIV = {1809.05468},
+    HAL = {hal-01872928},
+    DOI = {10.1007/s12220-019-00246-8},
+}
 
