--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,12 +3,12 @@
 
 @article{Zha20,
     abbr = {Zha20},
-    Author = {Zhang, H.-W.},
-    Title = {Wave and Klein-Gordon equations on certain locally symmetric spaces},
-    Journal = {J. Geom. Anal.},
-    Year = {2020},
-    ARXIV = {1809.05468},
-    HAL = {hal-01872928},
-    DOI = {10.1007/s12220-019-00246-8},
+    author = {Zhang, H.-W.},
+    title = {Wave and Klein-Gordon equations on certain locally symmetric spaces},
+    journal = {J. Geom. Anal.},
+    year = {2020},
+    arxiv = {1809.05468},
+    hal = {hal-01872928},
+    doi = {10.1007/s12220-019-00246-8},
 }
 
