--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,28 @@
 ---
 ---
 
+@article{AnZh22,
+    abbr = {AnZh22},
+    author = {Anker J.-Ph. and Zhang, H.-W.},
+    title = {Bottom of the L2 spectrum of the Laplacian on locally symmetric spaces},
+    journal = {Geom. Dedicata},
+    year = {2022},
+    arxiv = {2006.06473},
+    hal = {hal-02865274},
+    doi = {10.1007/s10711-021-00662-7},
+}
+
+@article{Zha21,
+    abbr = {Zha21},
+    author = {Zhang, H.-W.},
+    title = {Wave equation on certain noncompact symmetric spaces},
+    journal = {Pure Appl. Anal.},
+    year = {2021},
+    arxiv = {2007.11724},
+    hal = {hal-02905019},
+    doi = {10.2140/paa.2021.3.363},
+}
+
 @article{Zha20,
     abbr = {Zha20},
     author = {Zhang, H.-W.},
