--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,16 @@
 ---
 ---
 
+@article{AnZh,
+    abbr = {AnZh},
+    author = {Anker J.-Ph. and Zhang, H.-W.},
+    title = {Wave equation on general noncompact symmetric spaces},
+    journal = {preprint},
+    year = {2022},
+    arxiv = {2010.08467},
+    hal = {hal-02969730},
+}
+
 @article{AnZh22,
     abbr = {AnZh22},
     author = {Anker J.-Ph. and Zhang, H.-W.},
