--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,8 +5,7 @@
     abbr = {AnZh},
     author = {Anker J.-Ph. and Zhang, H.-W.},
     title = {Wave equation on general noncompact symmetric spaces},
-    journal = {preprint},
-    year = {2022},
+    year = {preprint},
     arxiv = {2010.08467},
     hal = {hal-02969730},
 }
