--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,8 +1,34 @@
 ---
 ---
 
+@article{GPZ,
+    abbr = {preprint-4},
+    author = {Grigor'yan A. and Papageorgiou E. and Zhang, H.-W.},
+    title = {Asymptotic behavior of the heat semigroup on certain Riemannian manifolds},
+    year = {preprint},
+    arxiv = {2205.06105},
+}
+
+@article{APZ,
+    abbr = {preprint-3},
+    author = {Anker J.-Ph. and Papageorgiou E. and Zhang, H.-W.},
+    title = {Asymptotic behavior of solutions to the heat equation on noncompact symmetric spaces},
+    year = {preprint},
+    arxiv = {2112.01323},
+    hal = {hal-03459571},
+}
+
+@article{AMPVZ,
+    abbr = {preprint-2},
+    author = {Anker J.-Ph. and Meda S. and Pierfelice V. and Vallarino M. and Zhang, H.-W.},
+    title = {Schrödinger equation on noncompact symmetric spaces},
+    year = {preprint},
+    arxiv = {2104.00265},
+    hal = {hal-03187413},
+}
+
 @article{AnZh,
-    abbr = {AnZh},
+    abbr = {preprint-1},
     author = {Anker J.-Ph. and Zhang, H.-W.},
     title = {Wave equation on general noncompact symmetric spaces},
     year = {preprint},
@@ -11,10 +37,10 @@
 }
 
 @article{AnZh22,
-    abbr = {AnZh22},
+    abbr = {article-3},
     author = {Anker J.-Ph. and Zhang, H.-W.},
     title = {Bottom of the L2 spectrum of the Laplacian on locally symmetric spaces},
-    journal = {Geom. Dedicata},
+    journal = {Geom. Dedicata, },
     year = {2022},
     arxiv = {2006.06473},
     hal = {hal-02865274},
@@ -22,10 +48,10 @@
 }
 
 @article{Zha21,
-    abbr = {Zha21},
+    abbr = {article-2},
     author = {Zhang, H.-W.},
     title = {Wave equation on certain noncompact symmetric spaces},
-    journal = {Pure Appl. Anal.},
+    journal = {Pure Appl. Anal., },
     year = {2021},
     arxiv = {2007.11724},
     hal = {hal-02905019},
@@ -33,13 +59,20 @@
 }
 
 @article{Zha20,
-    abbr = {Zha20},
+    abbr = {article-1},
     author = {Zhang, H.-W.},
     title = {Wave and Klein-Gordon equations on certain locally symmetric spaces},
-    journal = {J. Geom. Anal.},
+    journal = {J. Geom. Anal., },
     year = {2020},
     arxiv = {1809.05468},
     hal = {hal-01872928},
     doi = {10.1007/s12220-019-00246-8},
 }
 
+@article{Zha20t,
+    abbr = {thesis},
+    author = {Zhang, H.-W.},
+    title = {Équation des ondes sur les espaces symétriques et localement symétriques de type non compact (FR)},
+    year = {note},
+    hal = {tel-03042468},
+}
