--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 
 @article{GPZ,
-    abbr = {preprint-4},
+    abbr = {preprint},
     author = {Grigor'yan A. and Papageorgiou E. and Zhang, H.-W.},
     title = {Asymptotic behavior of the heat semigroup on certain Riemannian manifolds},
     year = {preprint},
@@ -10,7 +10,7 @@
 }
 
 @article{APZ,
-    abbr = {preprint-3},
+    abbr = {preprint},
     author = {Anker J.-Ph. and Papageorgiou E. and Zhang, H.-W.},
     title = {Asymptotic behavior of solutions to the heat equation on noncompact symmetric spaces},
     year = {preprint},
@@ -19,7 +19,7 @@
 }
 
 @article{AMPVZ,
-    abbr = {preprint-2},
+    abbr = {preprint},
     author = {Anker J.-Ph. and Meda S. and Pierfelice V. and Vallarino M. and Zhang, H.-W.},
     title = {Schrödinger equation on noncompact symmetric spaces},
     year = {preprint},
@@ -28,7 +28,7 @@
 }
 
 @article{AnZh,
-    abbr = {preprint-1},
+    abbr = {preprint},
     author = {Anker J.-Ph. and Zhang, H.-W.},
     title = {Wave equation on general noncompact symmetric spaces},
     year = {preprint},
@@ -37,7 +37,7 @@
 }
 
 @article{AnZh22,
-    abbr = {article-3},
+    abbr = {article},
     author = {Anker J.-Ph. and Zhang, H.-W.},
     title = {Bottom of the L2 spectrum of the Laplacian on locally symmetric spaces},
     journal = {Geom. Dedicata, },
@@ -48,7 +48,7 @@
 }
 
 @article{Zha21,
-    abbr = {article-2},
+    abbr = {article},
     author = {Zhang, H.-W.},
     title = {Wave equation on certain noncompact symmetric spaces},
     journal = {Pure Appl. Anal., },
@@ -59,7 +59,7 @@
 }
 
 @article{Zha20,
-    abbr = {article-1},
+    abbr = {article},
     author = {Zhang, H.-W.},
     title = {Wave and Klein-Gordon equations on certain locally symmetric spaces},
     journal = {J. Geom. Anal., },
@@ -73,6 +73,6 @@
     abbr = {thesis},
     author = {Zhang, H.-W.},
     title = {Équation des ondes sur les espaces symétriques et localement symétriques de type non compact (FR)},
-    year = {note},
+    year = {2020},
     hal = {tel-03042468},
 }
