--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @article{GPZ,
     abbr = {preprint},
-    author = {Grigor'yan A. and Papageorgiou E. and Zhang, H.-W.},
+    author = {Grigor'yan, A. and Papageorgiou, E. and Zhang, H.-W.},
     title = {Asymptotic behavior of the heat semigroup on certain Riemannian manifolds},
     year = {preprint},
     arxiv = {2205.06105},
@@ -11,7 +11,7 @@
 
 @article{APZ,
     abbr = {preprint},
-    author = {Anker J.-Ph. and Papageorgiou E. and Zhang, H.-W.},
+    author = {Anker, J.-Ph. and Papageorgiou, E. and Zhang, H.-W.},
     title = {Asymptotic behavior of solutions to the heat equation on noncompact symmetric spaces},
     year = {preprint},
     arxiv = {2112.01323},
@@ -20,7 +20,7 @@
 
 @article{AMPVZ,
     abbr = {preprint},
-    author = {Anker J.-Ph. and Meda S. and Pierfelice V. and Vallarino M. and Zhang, H.-W.},
+    author = {Anker, J.-Ph. and Meda, S. and Pierfelice, V. and Vallarino, M. and Zhang, H.-W.},
     title = {Schrödinger equation on noncompact symmetric spaces},
     year = {preprint},
     arxiv = {2104.00265},
@@ -29,7 +29,7 @@
 
 @article{AnZh,
     abbr = {preprint},
-    author = {Anker J.-Ph. and Zhang, H.-W.},
+    author = {Anker, J.-Ph. and Zhang, H.-W.},
     title = {Wave equation on general noncompact symmetric spaces},
     year = {preprint},
     arxiv = {2010.08467},
@@ -38,7 +38,7 @@
 
 @article{AnZh22,
     abbr = {article},
-    author = {Anker J.-Ph. and Zhang, H.-W.},
+    author = {Anker, J.-Ph. and Zhang, H.-W.},
     title = {Bottom of the L2 spectrum of the Laplacian on locally symmetric spaces},
     journal = {Geom. Dedicata, },
     year = {2022},
