--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -27,16 +27,17 @@
     hal = {hal-03187413},
 }
 
-@article{AnZh,
-    abbr = {preprint},
+@article{AnZh22b,
+    abbr = {article},
     author = {Anker, J.-Ph. and Zhang, H.-W.},
     title = {Wave equation on general noncompact symmetric spaces},
-    year = {preprint},
+    journal = {To appear in Amer. J. Math.,}
+    year = {2022},
     arxiv = {2010.08467},
     hal = {hal-02969730},
 }
 
-@article{AnZh22,
+@article{AnZh22a,
     abbr = {article},
     author = {Anker, J.-Ph. and Zhang, H.-W.},
     title = {Bottom of the L2 spectrum of the Laplacian on locally symmetric spaces},
