--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -31,7 +31,7 @@
     abbr = {article},
     author = {Anker, J.-Ph. and Zhang, H.-W.},
     title = {Wave equation on general noncompact symmetric spaces},
-    journal = {To appear in Amer. J. Math.,}
+    journal = {To appear in Amer. J. Math.,},
     year = {2022},
     arxiv = {2010.08467},
     hal = {hal-02969730},
