--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,11 +9,12 @@
     arxiv = {2205.06105},
 }
 
-@article{APZ,
-    abbr = {preprint},
+@article{APZ23,
+    abbr = {article},
     author = {Anker, J.-Ph. and Papageorgiou, E. and Zhang, H.-W.},
     title = {Asymptotic behavior of solutions to the heat equation on noncompact symmetric spaces},
-    year = {preprint},
+    journal = {To appear in J. Funct. Anal.,},
+    year = {2023},
     arxiv = {2112.01323},
     hal = {hal-03459571},
 }
@@ -27,12 +28,12 @@
     hal = {hal-03187413},
 }
 
-@article{AnZh22b,
+@article{AnZh23,
     abbr = {article},
     author = {Anker, J.-Ph. and Zhang, H.-W.},
     title = {Wave equation on general noncompact symmetric spaces},
     journal = {To appear in Amer. J. Math.,},
-    year = {2022},
+    year = {2023},
     arxiv = {2010.08467},
     hal = {hal-02969730},
 }
