--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,16 +7,18 @@
     title = {Asymptotic behavior of the heat semigroup on certain Riemannian manifolds},
     year = {preprint},
     arxiv = {2205.06105},
+    hal = {hal-03666655},
 }
 
 @article{APZ23,
     abbr = {article},
     author = {Anker, J.-Ph. and Papageorgiou, E. and Zhang, H.-W.},
     title = {Asymptotic behavior of solutions to the heat equation on noncompact symmetric spaces},
-    journal = {To appear in J. Funct. Anal.,},
+    journal = {J. Funct. Anal.,},
     year = {2023},
     arxiv = {2112.01323},
     hal = {hal-03459571},
+    doi = {10.1016/j.jfa.2022.109828},
 }
 
 @article{AMPVZ,
