--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,16 +16,18 @@
     title = {Asymptotic behavior of solutions to the heat equation on noncompact symmetric spaces},
     journal = {J. Funct. Anal.,},
     year = {2023},
+    doi = {10.1016/j.jfa.2022.109828},
     arxiv = {2112.01323},
     hal = {hal-03459571},
-    doi = {10.1016/j.jfa.2022.109828},
 }
 
-@article{AMPVZ,
-    abbr = {preprint},
+@article{AMPVZ23,
+    abbr = {article},
     author = {Anker, J.-Ph. and Meda, S. and Pierfelice, V. and Vallarino, M. and Zhang, H.-W.},
     title = {Schrödinger equation on noncompact symmetric spaces},
-    year = {preprint},
+    journal = {J. Differ. Equ.},
+    year = {2023},
+    doi = {10.1016/j.jde.2023.02.003},
     arxiv = {2104.00265},
     hal = {hal-03187413},
 }
@@ -46,9 +48,9 @@
     title = {Bottom of the L2 spectrum of the Laplacian on locally symmetric spaces},
     journal = {Geom. Dedicata, },
     year = {2022},
+    doi = {10.1007/s10711-021-00662-7},    
     arxiv = {2006.06473},
     hal = {hal-02865274},
-    doi = {10.1007/s10711-021-00662-7},
 }
 
 @article{Zha21,
@@ -57,9 +59,9 @@
     title = {Wave equation on certain noncompact symmetric spaces},
     journal = {Pure Appl. Anal., },
     year = {2021},
+    doi = {10.2140/paa.2021.3.363},    
     arxiv = {2007.11724},
     hal = {hal-02905019},
-    doi = {10.2140/paa.2021.3.363},
 }
 
 @article{Zha20,
@@ -68,9 +70,9 @@
     title = {Wave and Klein-Gordon equations on certain locally symmetric spaces},
     journal = {J. Geom. Anal., },
     year = {2020},
+    doi = {10.1007/s12220-019-00246-8},
     arxiv = {1809.05468},
     hal = {hal-01872928},
-    doi = {10.1007/s12220-019-00246-8},
 }
 
 @article{Zha20t,
