--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,12 @@
 ---
 ---
+@article{KRZ,
+    abbr = {preprint},
+    author = {Kumar, V. and Ruzhansky, M. and Zhang, H.-W.},
+    title = {Smoothing properties of dispersive equations on non-compact symmetric spaces},
+    year = {preprint},
+    arxiv = {2302.03961},
+}
 
 @article{GPZ,
     abbr = {preprint},
