--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,13 +8,25 @@
     arxiv = {2302.03961},
 }
 
-@article{GPZ,
-    abbr = {preprint},
+@article{GPZ23,
+    abbr = {article},
     author = {Grigor'yan, A. and Papageorgiou, E. and Zhang, H.-W.},
     title = {Asymptotic behavior of the heat semigroup on certain Riemannian manifolds},
-    year = {preprint},
+    journal = {To appear in "From Classical Analysis to Analysis on Fractals - The Robert Strichartz Memorial Volume", Springer,},
+    year = {2023},
     arxiv = {2205.06105},
     hal = {hal-03666655},
+}
+
+@article{AMPVZ23,
+    abbr = {article},
+    author = {Anker, J.-Ph. and Meda, S. and Pierfelice, V. and Vallarino, M. and Zhang, H.-W.},
+    title = {Schrödinger equation on noncompact symmetric spaces},
+    journal = {J. Differ. Equ.,},
+    year = {2023},
+    doi = {10.1016/j.jde.2023.02.003},
+    arxiv = {2104.00265},
+    hal = {hal-03187413},
 }
 
 @article{APZ23,
@@ -26,17 +38,6 @@
     doi = {10.1016/j.jfa.2022.109828},
     arxiv = {2112.01323},
     hal = {hal-03459571},
-}
-
-@article{AMPVZ23,
-    abbr = {article},
-    author = {Anker, J.-Ph. and Meda, S. and Pierfelice, V. and Vallarino, M. and Zhang, H.-W.},
-    title = {Schrödinger equation on noncompact symmetric spaces},
-    journal = {J. Differ. Equ.},
-    year = {2023},
-    doi = {10.1016/j.jde.2023.02.003},
-    arxiv = {2104.00265},
-    hal = {hal-03187413},
 }
 
 @article{AnZh23,
