--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,19 +1,46 @@
 ---
 ---
+@article{WZ,
+    abbr = {preprint},
+    author = {Wolf, L. L. and Zhang, H.-W.},
+    title = {[10] $L2$-spectrum, growth indicator function and critical exponent on locally symmetric spaces},
+    year = {preprint},
+    arxiv = {2311.11770},
+}
+
 @article{KRZ,
     abbr = {preprint},
     author = {Kumar, V. and Ruzhansky, M. and Zhang, H.-W.},
-    title = {Smoothing properties of dispersive equations on non-compact symmetric spaces},
+    title = {[9] Stein-Weiss inequality on non-compact symmetric spaces},
+    year = {preprint},
+    arxiv = {2310.19412},
+}
+
+@article{KRZ,
+    abbr = {preprint},
+    author = {Kumar, V. and Ruzhansky, M. },
+    title = {[8] Smoothing properties of dispersive equations on non-compact symmetric spaces},
     year = {preprint},
     arxiv = {2302.03961},
 }
 
-@article{GPZ23,
+@article{AnZh23,
     abbr = {article},
-    author = {Grigor'yan, A. and Papageorgiou, E. and Zhang, H.-W.},
-    title = {Asymptotic behavior of the heat semigroup on certain Riemannian manifolds},
-    journal = {To appear in "From Classical Analysis to Analysis on Fractals - The Robert Strichartz Memorial Volume", Springer,},
+    author = {Anker, J.-Ph. and Zhang, H.-W.},
+    title = {[7] Wave equation on general noncompact symmetric spaces},
+    journal = {To appear in Amer. J. Math.,},
     year = {2023},
+    arxiv = {2010.08467},
+    hal = {hal-02969730},
+}
+
+@article{GPZ23,
+    abbr = {Chapter},
+    author = {Grigor'yan, A. and Papageorgiou, E. and Zhang, H.-W.},
+    title = {[6] Asymptotic behavior of the heat semigroup on certain Riemannian manifolds},
+    journal = {From Classical Analysis to Analysis on Fractals - The Robert Strichartz Memorial Volume, Springer,},
+    year = {2023},
+    doi = {10.1007/978-3-031-37800-3},
     arxiv = {2205.06105},
     hal = {hal-03666655},
 }
@@ -21,7 +48,7 @@
 @article{AMPVZ23,
     abbr = {article},
     author = {Anker, J.-Ph. and Meda, S. and Pierfelice, V. and Vallarino, M. and Zhang, H.-W.},
-    title = {Schrödinger equation on noncompact symmetric spaces},
+    title = {[5] Schrödinger equation on noncompact symmetric spaces},
     journal = {J. Differ. Equ.,},
     year = {2023},
     doi = {10.1016/j.jde.2023.02.003},
@@ -33,27 +60,17 @@
     abbr = {article},
     author = {Anker, J.-Ph. and Papageorgiou, E. and Zhang, H.-W.},
     title = {Asymptotic behavior of solutions to the heat equation on noncompact symmetric spaces},
-    journal = {J. Funct. Anal.,},
+    journal = {[4] J. Funct. Anal.,},
     year = {2023},
     doi = {10.1016/j.jfa.2022.109828},
     arxiv = {2112.01323},
     hal = {hal-03459571},
 }
 
-@article{AnZh23,
-    abbr = {article},
-    author = {Anker, J.-Ph. and Zhang, H.-W.},
-    title = {Wave equation on general noncompact symmetric spaces},
-    journal = {To appear in Amer. J. Math.,},
-    year = {2023},
-    arxiv = {2010.08467},
-    hal = {hal-02969730},
-}
-
 @article{AnZh22a,
     abbr = {article},
     author = {Anker, J.-Ph. and Zhang, H.-W.},
-    title = {Bottom of the L2 spectrum of the Laplacian on locally symmetric spaces},
+    title = {[3] Bottom of the L2 spectrum of the Laplacian on locally symmetric spaces},
     journal = {Geom. Dedicata, },
     year = {2022},
     doi = {10.1007/s10711-021-00662-7},    
@@ -64,7 +81,7 @@
 @article{Zha21,
     abbr = {article},
     author = {Zhang, H.-W.},
-    title = {Wave equation on certain noncompact symmetric spaces},
+    title = {[2] Wave equation on certain noncompact symmetric spaces},
     journal = {Pure Appl. Anal., },
     year = {2021},
     doi = {10.2140/paa.2021.3.363},    
@@ -75,7 +92,7 @@
 @article{Zha20,
     abbr = {article},
     author = {Zhang, H.-W.},
-    title = {Wave and Klein-Gordon equations on certain locally symmetric spaces},
+    title = {[1] Wave and Klein-Gordon equations on certain locally symmetric spaces},
     journal = {J. Geom. Anal., },
     year = {2020},
     doi = {10.1007/s12220-019-00246-8},
@@ -86,7 +103,7 @@
 @article{Zha20t,
     abbr = {thesis},
     author = {Zhang, H.-W.},
-    title = {Équation des ondes sur les espaces symétriques et localement symétriques de type non compact (FR)},
+    title = {[0] Équation des ondes sur les espaces symétriques et localement symétriques de type non compact (FR)},
     year = {2020},
     hal = {tel-03042468},
 }
