--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 @article{WZ,
     abbr = {preprint},
     author = {Wolf, L. L. and Zhang, H.-W.},
-    title = {[10] $L2$-spectrum, growth indicator function and critical exponent on locally symmetric spaces},
+    title = {[10] $L^2$-spectrum, growth indicator function and critical exponent on locally symmetric spaces},
     year = {preprint},
     arxiv = {2311.11770},
 }
@@ -70,7 +70,7 @@
 @article{AnZh22a,
     abbr = {article},
     author = {Anker, J.-Ph. and Zhang, H.-W.},
-    title = {[3] Bottom of the L2 spectrum of the Laplacian on locally symmetric spaces},
+    title = {[3] Bottom of the $L^2$ spectrum of the Laplacian on locally symmetric spaces},
     journal = {Geom. Dedicata, },
     year = {2022},
     doi = {10.1007/s10711-021-00662-7},    
