--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -59,7 +59,7 @@
 @article{APZ23,
     abbr = {article},
     author = {Anker, J.-Ph. and Papageorgiou, E. and Zhang, H.-W.},
-    title = {Asymptotic behavior of solutions to the heat equation on noncompact symmetric spaces},
+    title = {[4] Asymptotic behavior of solutions to the heat equation on noncompact symmetric spaces},
     journal = {[4] J. Funct. Anal.,},
     year = {2023},
     doi = {10.1016/j.jfa.2022.109828},
