--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 ---
 ---
 @article{WZ,
-    abbr = {preprint},
+    abbr = {Preprint},
     author = {Wolf, L. L. and Zhang, H.-W.},
     title = {[10] $L^2$-spectrum, growth indicator function and critical exponent on locally symmetric spaces},
     year = {preprint},
@@ -9,7 +9,7 @@
 }
 
 @article{KRZ,
-    abbr = {preprint},
+    abbr = {Preprint},
     author = {Kumar, V. and Ruzhansky, M. and Zhang, H.-W.},
     title = {[9] Stein-Weiss inequality on non-compact symmetric spaces},
     year = {preprint},
@@ -17,7 +17,7 @@
 }
 
 @article{KRZ,
-    abbr = {preprint},
+    abbr = {Preprint},
     author = {Kumar, V. and Ruzhansky, M. },
     title = {[8] Smoothing properties of dispersive equations on non-compact symmetric spaces},
     year = {preprint},
@@ -25,7 +25,7 @@
 }
 
 @article{AnZh23,
-    abbr = {article},
+    abbr = {Article},
     author = {Anker, J.-Ph. and Zhang, H.-W.},
     title = {[7] Wave equation on general noncompact symmetric spaces},
     journal = {To appear in Amer. J. Math.,},
@@ -46,7 +46,7 @@
 }
 
 @article{AMPVZ23,
-    abbr = {article},
+    abbr = {Article},
     author = {Anker, J.-Ph. and Meda, S. and Pierfelice, V. and Vallarino, M. and Zhang, H.-W.},
     title = {[5] Schrödinger equation on noncompact symmetric spaces},
     journal = {J. Differ. Equ.,},
@@ -57,7 +57,7 @@
 }
 
 @article{APZ23,
-    abbr = {article},
+    abbr = {Article},
     author = {Anker, J.-Ph. and Papageorgiou, E. and Zhang, H.-W.},
     title = {[4] Asymptotic behavior of solutions to the heat equation on noncompact symmetric spaces},
     journal = {[4] J. Funct. Anal.,},
@@ -68,7 +68,7 @@
 }
 
 @article{AnZh22a,
-    abbr = {article},
+    abbr = {Article},
     author = {Anker, J.-Ph. and Zhang, H.-W.},
     title = {[3] Bottom of the $L^2$ spectrum of the Laplacian on locally symmetric spaces},
     journal = {Geom. Dedicata, },
@@ -79,7 +79,7 @@
 }
 
 @article{Zha21,
-    abbr = {article},
+    abbr = {Article},
     author = {Zhang, H.-W.},
     title = {[2] Wave equation on certain noncompact symmetric spaces},
     journal = {Pure Appl. Anal., },
@@ -90,7 +90,7 @@
 }
 
 @article{Zha20,
-    abbr = {article},
+    abbr = {Article},
     author = {Zhang, H.-W.},
     title = {[1] Wave and Klein-Gordon equations on certain locally symmetric spaces},
     journal = {J. Geom. Anal., },
@@ -101,7 +101,7 @@
 }
 
 @article{Zha20t,
-    abbr = {thesis},
+    abbr = {Thesis},
     author = {Zhang, H.-W.},
     title = {[0] Équation des ondes sur les espaces symétriques et localement symétriques de type non compact (FR)},
     year = {2020},
