--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,7 +18,7 @@
 
 @article{KRZ,
     abbr = {Preprint},
-    author = {Kumar, V. and Ruzhansky, M. },
+    author = {Kumar, V. and Ruzhansky, M. and Zhang, H.-W.},
     title = {[8] Smoothing properties of dispersive equations on non-compact symmetric spaces},
     year = {preprint},
     arxiv = {2302.03961},
