--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -60,7 +60,7 @@
     abbr = {Article},
     author = {Anker, J.-Ph. and Papageorgiou, E. and Zhang, H.-W.},
     title = {[4] Asymptotic behavior of solutions to the heat equation on noncompact symmetric spaces},
-    journal = {[4] J. Funct. Anal.,},
+    journal = {J. Funct. Anal.,},
     year = {2023},
     doi = {10.1016/j.jfa.2022.109828},
     arxiv = {2112.01323},
