--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 @article{WZ,
     abbr = {Preprint},
     author = {Wolf, L. L. and Zhang, H.-W.},
-    title = {[10] $L^2$-spectrum, growth indicator function and critical exponent on locally symmetric spaces},
+    title = {[11] $L^2$-spectrum, growth indicator function and critical exponent on locally symmetric spaces},
     year = {preprint},
     arxiv = {2311.11770},
 }
@@ -11,7 +11,7 @@
 @article{KRZ,
     abbr = {Preprint},
     author = {Kumar, V. and Ruzhansky, M. and Zhang, H.-W.},
-    title = {[9] Stein-Weiss inequality on non-compact symmetric spaces},
+    title = {[10] Stein-Weiss inequality on non-compact symmetric spaces},
     year = {preprint},
     arxiv = {2310.19412},
 }
@@ -19,28 +19,37 @@
 @article{KRZ,
     abbr = {Preprint},
     author = {Kumar, V. and Ruzhansky, M. and Zhang, H.-W.},
-    title = {[8] Smoothing properties of dispersive equations on non-compact symmetric spaces},
+    title = {[9] Smoothing properties of dispersive equations on non-compact symmetric spaces},
     year = {preprint},
     arxiv = {2302.03961},
 }
 
-@article{AnZh23,
+@article{AnZh24,
     abbr = {Article},
     author = {Anker, J.-Ph. and Zhang, H.-W.},
-    title = {[7] Wave equation on general noncompact symmetric spaces},
+    title = {[8] Wave equation on general noncompact symmetric spaces},
     journal = {To appear in Amer. J. Math.,},
-    year = {2023},
+    year = {2024},
     arxiv = {2010.08467},
     hal = {hal-02969730},
+}
+
+@article{Zha24,
+    abbr = {Chapter},
+    author = {Zhang, H.-W.},
+    title = {[7] Space-Time mixed norm estimates in Riemannian symmetric spaces of non-compact type},
+    journal = {In: Extended Abstracts 2021/2022 Methusalem Lectures, Trends in Mathematics, Birkhäuser, Cham,},
+    year = {2024},
+    doi = {10.1007/978-3-031-48579-4_23},
 }
 
 @article{GPZ23,
     abbr = {Chapter},
     author = {Grigor'yan, A. and Papageorgiou, E. and Zhang, H.-W.},
     title = {[6] Asymptotic behavior of the heat semigroup on certain Riemannian manifolds},
-    journal = {From Classical Analysis to Analysis on Fractals - The Robert Strichartz Memorial Volume, Springer,},
+    journal = {In: From Classical Analysis to Analysis on Fractals - The Robert Strichartz Memorial Volume, Springer,},
     year = {2023},
-    doi = {10.1007/978-3-031-37800-3},
+    doi = {10.1007/978-3-031-37800-3_8},
     arxiv = {2205.06105},
     hal = {hal-03666655},
 }
