--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,17 +1,9 @@
 ---
 ---
-@article{WZ,
-    abbr = {Preprint},
-    author = {Wolf, L. L. and Zhang, H.-W.},
-    title = {[11] $L^2$-spectrum, growth indicator function and critical exponent on locally symmetric spaces},
-    year = {preprint},
-    arxiv = {2311.11770},
-}
-
 @article{KRZ,
     abbr = {Preprint},
     author = {Kumar, V. and Ruzhansky, M. and Zhang, H.-W.},
-    title = {[10] Stein-Weiss inequality on non-compact symmetric spaces},
+    title = {[11] Stein-Weiss inequality on non-compact symmetric spaces},
     year = {preprint},
     arxiv = {2310.19412},
 }
@@ -19,9 +11,18 @@
 @article{KRZ,
     abbr = {Preprint},
     author = {Kumar, V. and Ruzhansky, M. and Zhang, H.-W.},
-    title = {[9] Smoothing properties of dispersive equations on non-compact symmetric spaces},
+    title = {[10] Smoothing properties of dispersive equations on non-compact symmetric spaces},
     year = {preprint},
     arxiv = {2302.03961},
+}
+
+@article{WZ,
+    abbr = {Article},
+    author = {Wolf, L. L. and Zhang, H.-W.},
+    title = {[9] $L^2$-spectrum, growth indicator function and critical exponent on locally symmetric spaces},
+    journal = {To appear in Proc. Amer. Math. Soc.,},
+    year = {2024},
+    arxiv = {2311.11770},
 }
 
 @article{AnZh24,
