--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,19 +20,21 @@
     abbr = {Article},
     author = {Wolf, L. L. and Zhang, H.-W.},
     title = {[9] $L^2$-spectrum, growth indicator function and critical exponent on locally symmetric spaces},
-    journal = {To appear in Proc. Amer. Math. Soc.,},
+    journal = {Proc. Amer. Math. Soc.,},
     year = {2024},
     arxiv = {2311.11770},
+    doi = {10.1090/proc/16935},
 }
 
 @article{AnZh24,
     abbr = {Article},
     author = {Anker, J.-Ph. and Zhang, H.-W.},
     title = {[8] Wave equation on general noncompact symmetric spaces},
-    journal = {To appear in Amer. J. Math.,},
+    journal = {Amer. J. Math.},
     year = {2024},
     arxiv = {2010.08467},
     hal = {hal-02969730},
+    doi = {10.1353/ajm.2024.a932434},
 }
 
 @article{Zha24,
