--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,13 @@
 ---
 ---
+@article{MZZ,
+    abbr = {Preprint},
+    author = {Meng, L. and Zhang, H.-W., M. and Zhang J.},
+    title = {[12] Massless Dirac equation on spinor bundles over real hyperbolic spaces},
+    year = {preprint},
+    arxiv = {2411.19597},
+}
+
 @article{KRZ,
     abbr = {Preprint},
     author = {Kumar, V. and Ruzhansky, M. and Zhang, H.-W.},
