--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 @article{MZZ,
     abbr = {Preprint},
-    author = {Meng, L. and Zhang, H.-W., M. and Zhang J.},
+    author = {Meng, L. and Zhang, H.-W. and Zhang, J.},
     title = {[12] Massless Dirac equation on spinor bundles over real hyperbolic spaces},
     year = {preprint},
     arxiv = {2411.19597},
