--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -28,7 +28,7 @@
     abbr = {Article},
     author = {Wolf, L. L. and Zhang, H.-W.},
     title = {[9] $L^2$-spectrum, growth indicator function and critical exponent on locally symmetric spaces},
-    journal = {Proc. Amer. Math. Soc.,},
+    journal = {Proc. Amer. Math. Soc.},
     year = {2024},
     arxiv = {2311.11770},
     doi = {10.1090/proc/16935},
@@ -49,7 +49,7 @@
     abbr = {Chapter},
     author = {Zhang, H.-W.},
     title = {[7] Space-Time mixed norm estimates in Riemannian symmetric spaces of non-compact type},
-    journal = {In: Extended Abstracts 2021/2022 Methusalem Lectures, Trends in Mathematics, Birkhäuser, Cham,},
+    journal = {In: Extended Abstracts 2021/2022 Methusalem Lectures, Trends in Mathematics, Birkhäuser, Cham},
     year = {2024},
     doi = {10.1007/978-3-031-48579-4_23},
 }
@@ -58,7 +58,7 @@
     abbr = {Chapter},
     author = {Grigor'yan, A. and Papageorgiou, E. and Zhang, H.-W.},
     title = {[6] Asymptotic behavior of the heat semigroup on certain Riemannian manifolds},
-    journal = {In: From Classical Analysis to Analysis on Fractals - The Robert Strichartz Memorial Volume, Springer,},
+    journal = {In: From Classical Analysis to Analysis on Fractals - The Robert Strichartz Memorial Volume, Springer},
     year = {2023},
     doi = {10.1007/978-3-031-37800-3_8},
     arxiv = {2205.06105},
@@ -69,7 +69,7 @@
     abbr = {Article},
     author = {Anker, J.-Ph. and Meda, S. and Pierfelice, V. and Vallarino, M. and Zhang, H.-W.},
     title = {[5] Schrödinger equation on noncompact symmetric spaces},
-    journal = {J. Differ. Equ.,},
+    journal = {J. Differ. Equ.},
     year = {2023},
     doi = {10.1016/j.jde.2023.02.003},
     arxiv = {2104.00265},
@@ -80,7 +80,7 @@
     abbr = {Article},
     author = {Anker, J.-Ph. and Papageorgiou, E. and Zhang, H.-W.},
     title = {[4] Asymptotic behavior of solutions to the heat equation on noncompact symmetric spaces},
-    journal = {J. Funct. Anal.,},
+    journal = {J. Funct. Anal.},
     year = {2023},
     doi = {10.1016/j.jfa.2022.109828},
     arxiv = {2112.01323},
@@ -91,7 +91,7 @@
     abbr = {Article},
     author = {Anker, J.-Ph. and Zhang, H.-W.},
     title = {[3] Bottom of the $L^2$ spectrum of the Laplacian on locally symmetric spaces},
-    journal = {Geom. Dedicata, },
+    journal = {Geom. Dedicata},
     year = {2022},
     doi = {10.1007/s10711-021-00662-7},    
     arxiv = {2006.06473},
@@ -102,7 +102,7 @@
     abbr = {Article},
     author = {Zhang, H.-W.},
     title = {[2] Wave equation on certain noncompact symmetric spaces},
-    journal = {Pure Appl. Anal., },
+    journal = {Pure Appl. Anal.},
     year = {2021},
     doi = {10.2140/paa.2021.3.363},    
     arxiv = {2007.11724},
@@ -113,7 +113,7 @@
     abbr = {Article},
     author = {Zhang, H.-W.},
     title = {[1] Wave and Klein-Gordon equations on certain locally symmetric spaces},
-    journal = {J. Geom. Anal., },
+    journal = {J. Geom. Anal.},
     year = {2020},
     doi = {10.1007/s12220-019-00246-8},
     arxiv = {1809.05468},
