--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,13 @@
 ---
 ---
+@article{WZ,
+    abbr = {Preprint},
+    author = {Wang Y. and Zhang, H.-W.},
+    title = {[13] Lacunary spherical maximal operators on hyperbolic spaces},
+    year = {preprint},
+    arxiv = {2502.20739},
+}
+
 @article{MZZ,
     abbr = {Preprint},
     author = {Meng, L. and Zhang, H.-W. and Zhang, J.},
