--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 @article{WZ,
     abbr = {Preprint},
-    author = {Wang Y. and Zhang, H.-W.},
+    author = {Wang, Y. and Zhang, H.-W.},
     title = {[13] Lacunary spherical maximal operators on hyperbolic spaces},
     year = {preprint},
     arxiv = {2502.20739},
